fixed exhibit title alignment

--- a/sass/breakpoints/_768up.scss
+++ b/sass/breakpoints/_768up.scss
@@ -51,7 +51,9 @@ footer {
 .exhibits.summary #primary {
 	width: 556px;
 }
-.exhibits #content > h1:first-of-type {
+
+.exhibits.show #content > h1:first-of-type,
+.exhibits.summary #content > h1:first-of-type {
 	margin-left: 212px;
 }
 .exhibit .description,
